card-search-api guarda los datos buscados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{ name }}</h1>
-
-<app-home></app-home>
+<nav>
+  <a routerLink="/compras">Compras</a>
+  <a routerLink="/stock">Stock</a>
+  <a routerLink="/ventas">Ventas</a>
+</nav>
+<router-outlet></router-outlet>
