venta_component iniciado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 <h1>{{ name }}</h1>
 <nav>
-  <a routerLink="/compras">Compras</a>
-  <a routerLink="/stock">Stock</a>
-  <a routerLink="/ventas">Ventas</a>
+  <a class="btn btn-primary" routerLink="/compras">Compras</a>
+  <a class="btn btn-primary" routerLink="/stock">Stock</a>
+  <a class="btn btn-primary" routerLink="/ventas">Ventas</a>
+  <a class="btn btn-primary" routerLink="/ventas/new">Venta Nueva</a>
+  
 </nav>
 <router-outlet></router-outlet>
