--- a/src/app/components/shared/card-search/card-search.component.html
+++ b/src/app/components/shared/card-search/card-search.component.html
@@ -1,20 +1,31 @@
-<div class="form-inline">
-	<div class="form-group col-4">
-		<label for="nombreInput" class="col-12">Nombre:</label>
-	  <input type="text" class="form-control col-12" id="nombreInput" [(ngModel)]="cartaABuscar" [ngbTypeahead]="search" (change)="autocompletarExpansion()">
-  </div>
-  <div class="form-group col-4">
-      <label for="inputExpansion" class="col-12">Expansion:</label>
-      <select id="inputExpansion" class="form-control col-12" [(ngModel)]="expansionABuscar" (change)="autocompletarVersion()">
-        <option selected value="">Choose...</option>
-        <option *ngFor="let expansion of expansiones" [value]="expansion.code">{{expansion.name}}</option>
-      </select>
-  </div>
-  <div class="form-group col-4">
-      <label for="inputVersion" class="col-12">Version:</label>
-      <select id="inputVersion" class="form-control col-12" [(ngModel)]="versionABuscar" (change)="buscarCartaConVersion()">
-        <option selected value=''>Choose...</option>
-        <option *ngFor="let version of versiones; index as vIndex" [value]="version">{{vIndex+1}}</option>
-      </select>
-  </div>
+
+<div>
+  <table class="table-stripped fixed" class="columns12">
+    <thead>
+      <tr class="columns12">
+        <th scope="col" class="columns4">Nombre</th>
+        <th scope="col" class="columns4">Expansion</th>
+        <th scope="col" class="columns4">Version</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr class="columns12">
+        <td class="columns4">
+          <input type="text" class="form-control col-12" id="nombreInput" [(ngModel)]="cartaABuscar" [ngbTypeahead]="search" (change)="autocompletarExpansion()">
+        </td>
+        <td class="columns4">
+          <select id="inputExpansion" class="form-control col-12" [(ngModel)]="expansionABuscar" (change)="autocompletarVersion()">
+            <option selected value="">Choose...</option>
+            <option *ngFor="let expansion of expansiones" [value]="expansion.code">{{expansion.name}}</option>
+          </select>
+        </td>
+        <td class="columns4">
+          <select id="inputVersion" class="form-control col-12" [(ngModel)]="versionABuscar" (change)="buscarCartaConVersion()">
+            <option selected value=''>Choose...</option>
+            <option *ngFor="let version of versiones; index as vIndex" [value]="version">{{vIndex+1}}</option>
+          </select>
+        </td>
+      </tr>    
+    </tbody>
+  </table>
 </div>
