--- a/src/app/components/compraVenta/compra/compra.component.html
+++ b/src/app/components/compraVenta/compra/compra.component.html
@@ -27,7 +27,7 @@
               <input type="text" class="form-control" formControlName="vendedor">
             </td>
             <td class="columns1">
-              <input type="number" class="form-control" formControlName="numArticulos">              
+              <input type="text" class="form-control" formControlName="numArticulos">              
             </td>
             <td class="columns1">
               <input type="date" class="form-control" formControlName="fechaCompra">
@@ -41,19 +41,19 @@
               </select>
             </td>
             <td class="columns1">              
-              <input type="number" class="form-control" formControlName="importeTotal">
+              <input type="text" class="form-control" formControlName="importeTotal">
             </td>
             <td class="columns1">
-              <input type="number" class="form-control" formControlName="valorArticulos">
+              <input type="text" class="form-control" formControlName="valorArticulos">
             </td>
             <td class="columns1">
-              <input type="number" class="form-control" formControlName="gastosEnvio">
+              <input type="text" class="form-control" formControlName="gastosEnvio">
             </td>
             <td class="columns1">
-              <input type="number" class="form-control" formControlName="otrosGastos">
+              <input type="text" class="form-control" formControlName="otrosGastos">
             </td>
             <td class="columns1">
-              <input type="number" class="form-control" formControlName="refund">
+              <input type="text" class="form-control" formControlName="refund">
             </td>
             <td class="columns1">
               <input type="checkbox" class="form-check-inline" formControlName="mkm">
