--- a/src/app/components/compraVenta/carta-comprada/carta-comprada.component.html
+++ b/src/app/components/compraVenta/carta-comprada/carta-comprada.component.html
@@ -24,7 +24,7 @@
   <label class="col-3">
     <label class="col-6">
       <label class="col-12">Precio Total:</label>
-      <label>{{carta.precioTotal}}</label>
+      <input class="col-12" type="text" formControlName="precioTotal">
     </label>
     <label class="col-3">
       <label class="col-12">20%:</label>
@@ -36,6 +36,7 @@
     </label>
   </label>  
   <label class="col-1">
+      <label class="col-12">Precio Venta:</label>
     <input type="number" class="form-control" formControlName="precioVenta">  
   </label> 
 </div>
